# mtg_mirea_python

Backend/: .gitignore  pyproject.toml
Backend/migration/: env.py
Backend/src/application/: main.py
Backend/src/application/controllers/http/: __init__.py
Backend/src/application/controllers/http/v1/: ManaCostType.py
Backend/src/application/database/: __init__.py
Backend/src/application/database/models/: Card.py  Card2Grade.py  Grade.py  ManaCost.py  ManaCostType.py  SubType.py  Type.py  __init__.py
Backend/src/application/domain/repository/: Card.py  Grade.py  ManaCost.py  ManaCostType.py  SubType.py  Type.py  __init__.py
Backend/src/application/domain/schemas/: Card.py  CardGradeRel.py  CardManaCostTypeRel.py  CardSubTypeRel.py  CardTypeRel.py  Grade.py  ManaCostType.py  SubType.py  Type.py  __init__.py
Backend/src/application/domain/services/: Card.py  ManaCostType.py  __init__.py
Backend/src/application/utils/: repository.py
Backend/src/config/: __init__.py  config.yaml  main.py
