[tool.poetry]
name = "mtg_mirea_python"
version = "0.1.0"
description = ""
authors = ["Васильев Александр <wyndace.av@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python = "^3.12"
icecream = "^2.1.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
